ocaml/testsuite/tests/parse-errors/optional_tuple_component2.compilers.reference
File "optional_tuple_component2.ml", line 8, characters 4-7:
8 | (y, ?x:2)
        ^^^
Error: Syntax error
